--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
     </developers>
 
     <properties>
+
         <!-- Configuration -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.7</java.version>
@@ -155,6 +156,7 @@
         </dependency>
     </dependencies>
 
+
     <build>
         <plugins>
             <plugin>
@@ -193,6 +195,19 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>artifactory.internal</id>
+            <name>Internal Release Repository</name>
+            <url>http://artifactory.transmode.se/artifactory/libs-release-local</url>
+        </repository>
+        <snapshotRepository>
+            <id>artifactory.snapshots</id>
+            <name>Internal Snapshot Repository</name>
+            <url>http://artifactory.transmode.se/artifactory/libs-snapshot-local</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <profiles>
         <profile>
