Removed optional from apache httpclient deps

--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>${httpclient.version}</version>
-            <optional>true</optional>
+            <!-- <optional>true</optional> -->
         </dependency>
         <dependency>
             <groupId>com.ning</groupId>
